fixed nav bar gap

--- a/main.css
+++ b/main.css
@@ -164,7 +164,7 @@ aside{
     display: none;
     border-radius: 50%;
     position: fixed;
-    top: 150px;
+    top: 160px;
     left: 5%;
     padding: 5px;
     background-color: #4b4747;
@@ -683,6 +683,7 @@ color: rgba(20, 134, 115, 0.685);
    
 
     .navigation-bar{
+        gap: 0.5vh;
         position: fixed;
         z-index: 1000;
         width: 90%;
